--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -65,6 +65,10 @@ a{
    display:grid;
    grid-template-columns:repeat(10,150px);
 }
+#TableOptions {
+    display: grid;
+    grid-template-columns: repeat(2,150px);
+}
 
 #TableVorhangschloss {
     display: grid;
