--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/HebelzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/HebelzylinderRout.cshtml
@@ -22,28 +22,24 @@
 
                 @Html.DropDownListFor(model => model.schliessanlagenId,
                         new List<SelectListItem> {
-                        new SelectListItem {  Value = "9",Text="Profil-Doppelzylinder" },
-                        new SelectListItem { Value = "10",Text="Profil-Halbzylinder" },
-                        new SelectListItem {  Value = "11",Text="Profil-Knaufzylinder" },
                         new SelectListItem {  Value = "12",Text="Hebelzylinder" },
-                        new SelectListItem { Value = "13",Text="Vorhangschloss" },
-                        new SelectListItem {  Value = "14",Text="Aussenzylinder / Rundzylinder" }
                         },
                          new { @class = " form-select", @id = "select" })
                 
                 <div id="createColum">
+                    <label> Name</label>
+                    @Html.EditorFor(m => m.Name, new { htmlAttributes = new { @class = "form-control" } })
 
                     <label> Artikelnummer</label>
-                    @Html.EditorFor(m => m.Artikelnummer)
-              
+                    @Html.EditorFor(m => m.Artikelnummer, new { htmlAttributes = new { @class = "form-control" } })
               
                     <label>Count</label>
-                    @Html.EditorFor(m => m.Count)
+                    @Html.EditorFor(m => m.Count, new { htmlAttributes = new { @class = "form-control" } })
                     <label>Min</label>
-                    @Html.EditorFor(m => m.min)
+                    @Html.EditorFor(m => m.min, new { htmlAttributes = new { @class = "form-control" } })
             
                     <label>Max</label>
-                    @Html.EditorFor(m => m.max)
+                    @Html.EditorFor(m => m.max, new { htmlAttributes = new { @class = "form-control" } })
               
                     <label asp-for="ImageFile"  class="control-label"></label>
                 
@@ -53,7 +49,7 @@
                     @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
 
                 </div>
-                <input type="submit" class="mx-auto" value="Create Hebelzylinder" />
+                <input type="submit" class="btn btn-success" value="Create Hebelzylinder" />
                 <hr />
             }
         </div>
@@ -64,30 +60,55 @@
         {
             <table class="table table-bordered">
                 <tr>
+                    <th>Name</th>
                     <th>Image</th>
                     <th>Artikelnummer</th>
-                    <th>Intern</th>
-                    <th>Extern</th>
                     <th>min</th>
                     <th>max</th>
                     <th>Edit</th>
+                    <th>Options</th>
                     <th>Delete</th>
                 </tr>
                
                     @foreach (var item in ViewBag.item)
                     {
                         <tr>
-                        <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="100px" height="100px" /></td>
+                        <td id="rowTable" class="table-info">@item.Name</td>
+                        <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
                         <td id="rowTable" class="table-info">@item.Artikelnummer</td>
-                        <td id="rowTable" class="table-info">@item.Intern</td>
-                        <td id="rowTable" class="table-info">@item.Extern</td>
                         <td id="rowTable" class="table-info">@item.min</td>
                         <td id="rowTable" class="table-info">@item.max</td>
-                        <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
+                        <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Halbzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
+                        <td id="rowTable" class="table-info">
+                            <a class="compItem" href="@Url.Action("DetailsHebelZylinder","Home", new { item.Id })">
+                                <img src="@("/Image/options.png")" height="30" width="30" />
+                            </a>
+                        </td>
                         <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
                         </tr>
                     }
             </table>
         }
+        <div id="modDialog" class="modal fade">
+            <div id="dialogContent" class="modal-dialog">
+            </div>
+        </div>
     </div>
 </div>
+@section scripts
+{
+    <script type="text/javascript">
+
+        $(function () {
+            $.ajaxSetup({ cache: false });
+            $(".compItem").click(function (e) {
+
+                e.preventDefault();
+                $.get(this.href, function (data) {
+                    $('#dialogContent').html(data);
+                    $('#modDialog').modal('show');
+                });
+            });
+        })
+    </script>
+}
