--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/DetailsHebelZylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/DetailsHebelZylinder.cshtml
@@ -3,13 +3,12 @@
     @Html.HiddenFor(x => x.Id)
     <div class="modal-header">
         <button class=" btn btn-success close" id="close" data-dismiss="modal" area-hidden="true">X</button>
-        <h4></h4>
+        <button class=" btn btn-success " id="Add_options" data-dismiss="modal" area-hidden="true"><a href="@Url.Action("Add_All_Options","Home")">Add options</a></button>
     </div>
     <div class="modal-body">
         <dl class="dl-horizontal">
 
             <dt>N&G Funktion</dt>
-
             <select class="form-select">
                 @foreach (var item in ViewBag.c)
                 {
@@ -89,7 +88,20 @@
                     <option>@item.Schließhebel</option>
                 }
             </select>
-
+            <dt>Modulbauweise</dt>
+            <select class="form-select">
+                @foreach (var item in ViewBag.c)
+                {
+                    <option>@item.Modulbauweise</option>
+                }
+            </select>
+            <dt>Zubehör</dt>
+            <select class="form-select">
+                @foreach (var item in ViewBag.c)
+                {
+                    <option>@item.Zubehör</option>
+                }
+            </select>
         </dl>
     </div>
 </div>
