--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/DetailsProfil_Halbzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/DetailsProfil_Halbzylinder.cshtml
@@ -3,10 +3,12 @@
     @Html.HiddenFor(x => x.Id)
     <div class="modal-header">
         <button class=" btn btn-success close" id="close" data-dismiss="modal" area-hidden="true">X</button>
+        <button class=" btn btn-success " id="Add_options" data-dismiss="modal" area-hidden="true"><a href="@Url.Action("Add_All_Options","Home")">Add options</a></button>
         <h4></h4>
     </div>
     <div class="modal-body">
         <dl class="dl-horizontal">
+
             <dt>N&G Funktion</dt>
             <select class="form-select">
                 @foreach (var item in ViewBag.c)
