--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/HebelzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/HebelzylinderRout.cshtml
@@ -30,16 +30,14 @@
                     <label> Name</label>
                     @Html.EditorFor(m => m.Name, new { htmlAttributes = new { @class = "form-control" } })
 
+                    <label>Cost</label>
+                    @Html.EditorFor(m => m.Cost, new { htmlAttributes = new { @class = "form-control" } })
+
                     <label> Artikelnummer</label>
                     @Html.EditorFor(m => m.Artikelnummer, new { htmlAttributes = new { @class = "form-control" } })
               
                     <label>Count</label>
                     @Html.EditorFor(m => m.Count, new { htmlAttributes = new { @class = "form-control" } })
-                    <label>Min</label>
-                    @Html.EditorFor(m => m.min, new { htmlAttributes = new { @class = "form-control" } })
-            
-                    <label>Max</label>
-                    @Html.EditorFor(m => m.max, new { htmlAttributes = new { @class = "form-control" } })
               
                     <label asp-for="ImageFile"  class="control-label"></label>
                 
@@ -62,9 +60,8 @@
                 <tr>
                     <th>Name</th>
                     <th>Image</th>
+                    <th>Cost</th>
                     <th>Artikelnummer</th>
-                    <th>min</th>
-                    <th>max</th>
                     <th>Edit</th>
                     <th>Options</th>
                     <th>Delete</th>
@@ -75,9 +72,8 @@
                         <tr>
                         <td id="rowTable" class="table-info">@item.Name</td>
                         <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
+                        <td id="rowTable" class="table-info">@item.Cost</td>
                         <td id="rowTable" class="table-info">@item.Artikelnummer</td>
-                        <td id="rowTable" class="table-info">@item.min</td>
-                        <td id="rowTable" class="table-info">@item.max</td>
                         <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Halbzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
                         <td id="rowTable" class="table-info">
                             <a class="compItem" href="@Url.Action("DetailsHebelZylinder","Home", new { item.Id })">
