--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
@@ -21,28 +21,35 @@
 
                 @Html.DropDownListFor(model => model.schliessanlagenId,
                         new List<SelectListItem> {
-                        new SelectListItem {  Value = "9",Text="Profil-Doppelzylinder" },
-                        new SelectListItem { Value = "10",Text="Profil-Halbzylinder" },
-                        new SelectListItem {  Value = "11",Text="Profil-Knaufzylinder" },
-                        new SelectListItem {  Value = "12",Text="Hebelzylinder" },
-                        new SelectListItem { Value = "13",Text="Vorhangschloss" },
-                        new SelectListItem {  Value = "14",Text="Aussenzylinder / Rundzylinder" }
+                        new SelectListItem {  Value = "11",Text="Profil-Knaufzylinder" }
                         },
                          new { @class = " form-select", @id = "select" })
 
                <div id="createColum">
+                    <label> Name</label>
+                    @Html.EditorFor(m => m.Name)
+
+                    <label>Cost</label>
+                    @Html.EditorFor(m => m.Cost)
+
                     <label> Artikelnummer</label>
                     @Html.EditorFor(m => m.Artikelnummer)
+                    
                     <label>Extern</label>
                     @Html.EditorFor(m => m.Extern)
+                    
                     <label>Intern</label>
                     @Html.EditorFor(m => m.Intern)
+                    
                     <label>Count</label>
                     @Html.EditorFor(m => m.Count)
+                   
                     <label>Min</label>
                     @Html.EditorFor(m => m.min)
+                    
                     <label>Max</label>
                     @Html.EditorFor(m => m.max)            
+                   
                     <label asp-for="ImageFile" class="control-label"></label>
                     <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
                     <span asp-validation-for="ImageFile" class="text-danger"></span>
@@ -59,30 +66,59 @@
         {
             <table class="table table-bordered">
                 <tr id="Table">
+                    <th>Name</th>
                     <th>Image</th>
+                    <th>Cost</th>
                     <th>Artikelnummer</th>
                     <th>Intern</th>
                     <th>Extern</th>
                     <th>min</th>
                     <th>max</th>
                     <th>Edit</th>
+                    <th>Options</th>
                     <th>Delete</th>
-                </tr>
+             
                     @foreach (var item in ViewBag.item)
                     {
-                        <tr>
+                        <td id="rowTable" class="table-info">@item.Name</td>
                         <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
+                        <td id="rowTable" class="table-info">@item.Cost</td>
                         <td id="rowTable" class="table-info">@item.Artikelnummer</td>
                         <td id="rowTable" class="table-info">@item.Intern</td>
                         <td id="rowTable" class="table-info">@item.Extern</td>
                         <td id="rowTable" class="table-info">@item.min</td>
                         <td id="rowTable" class="table-info">@item.max</td>
-                        <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
+                        <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Profil_Knaufzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
+                        <td id="rowTable" class="table-info">
+                            <a class="compItem" href="@Url.Action("DetailsProfil_Knaufzylinder","Home", new { item.Id })">
+                                <img src="@("/Image/options.png")" height="30" width="30" />
+                            </a>
+                        </td>
                         <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
-                        </tr>
                     }
+                </tr>
             </table>
-        } 
-
+        }
+        <div id="modDialog" class="modal fade">
+            <div id="dialogContent" class="modal-dialog">
+            </div>
+        </div>
     </div>
 </div>
+@section scripts
+{
+    <script type="text/javascript">
+
+        $(function () {
+            $.ajaxSetup({ cache: false });
+            $(".compItem").click(function (e) {
+
+                e.preventDefault();
+                $.get(this.href, function (data) {
+                    $('#dialogContent').html(data);
+                    $('#modDialog').modal('show');
+                });
+            });
+        })
+    </script>
+}
